# byahengine

./: .gitignore  CMakeLists.txt  README.md  clean.ps1  clean.sh  q  run.ps1  run.sh
assets/: CREDITS.txt  _ambience.amb  map.txt  map_audio.au  map_lights.lt  map_npc_poses.np  map_roads.rd  map_terrain.hf
assets/audio/npc/: README.md
assets/audio/radio/: README.md
assets/backup/map_backup/: map.txt  map_npc_poses.np  map_ocean.oc  map_terrain.hf
assets/entity/: driver_pose.txt
assets/maps/poblacion/: map.txt  meta.txt
assets/shaders/: depth.vert  gizmo.frag  gizmo.vert  lit.vert  object.frag  ocean.frag  ocean.vert  rain.frag  rain.vert  rain_flash.frag  rain_flash.vert  road.frag  scene_lit.frag  scene_lit.vert  sky.frag  sky.vert  splash.frag  splash.vert
src/: stb_impl.cpp
src/audio/: audio.cpp  audio.hpp
src/core/: app.cpp  app.hpp  cam.cpp  cam.hpp  const.hpp  editor_cam.cpp  editor_cam.hpp  editor_input.cpp  editor_input.hpp  editor_state.hpp  map_manager.hpp  npc_update.cpp  npc_update.hpp  player_state.hpp  settings.cpp  settings.hpp  window.cpp  window.hpp
src/physics/: collision.cpp  collision.hpp  dynamic_sim.hpp  obstacle.hpp  player_state.hpp  trike_aabb.hpp  trike_physics.cpp  trike_physics.hpp  trike_state.hpp
src/renderer/: editor_renderer.cpp  editor_renderer.hpp  font.cpp  hud.cpp  hud.hpp  obj_loader.cpp  obj_loader.hpp  obj_mesh.cpp  obj_mesh.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
src/tricycle/: driver_anim.cpp  driver_anim.hpp  driver_model.cpp  driver_model.hpp  tricycle_model.cpp  tricycle_model.hpp
src/world/: ambience_zone.cpp  ambience_zone.hpp  animal_anim.cpp  animal_anim.hpp  animal_behavior.hpp  height_field.cpp  height_field.hpp  light_source.hpp  npc.cpp  npc.hpp  ocean.cpp  ocean.hpp  rain.cpp  rain.hpp  road_builder.cpp  road_builder.hpp  road_spline.cpp  road_spline.hpp  world_map.cpp  world_map.hpp  world_object.hpp
